# tower-of-babel

./: .gitignore  DESIGN.md  README.md
C/: README.md  meson.build
C/src/: gtk-4-libadwaita.c  sdl-square.c
D/: README.md
FizzBuzz/: README.md  fizzbuzz.code-workspace
FizzBuzz/c/: fizzbuzz.c  main.c  meson.build
FizzBuzz/d/: .gitignore  dub.json  main.d  meson.build
FizzBuzz/dotnet/: Program.cs  fizz_buzz.csproj
FizzBuzz/golang/: main.go
FizzBuzz/java/: FizzBuzz.java  build.gradle.kts  meson.build  settings.gradle.kts
FizzBuzz/javascript/: fizzbuzz.js  main.js
FizzBuzz/julia/: fizzbizz.jl
FizzBuzz/kotlin/: build.gradle.kts  fizzbuzz.kt  settings.gradle.kts
FizzBuzz/python/: fizzbuzz.py  main.py
FizzBuzz/rust/: Cargo.toml
FizzBuzz/vala/: fizz-buzz.vala  meson.build
GTK-Hello-World/: README.md
GTK-Hello-World/c/: gtk-hello-world.c  meson.build
GTK-Hello-World/d/: main.d  meson.build
GTK-Hello-World/python/: gtk-hello-world.py
GTK-Hello-World/rust/: Cargo.toml
GTK-Hello-World/vala/: gtk-hello-world.vala  meson.build
HelloWorld/: README.md
HelloWorld/Python/: README.md
HelloWorld/Rust/: README.md
SDL-Square/: README.md
_design/: CLI-App.md  FizzBuzz.md  Hello-World.md  Simple-Server-Client.md
c/: README.md  meson.build
c/src/: fizzbuzz.c  (+1 more)
d/: .gitignore  README.md  dub.json
dotnet/: README.md
golang/: README.md  fizzbuzz.go
java/: FizzBuzz.java  README.md  build.gradle  settings.gradle
javascript/: FizzBuzz.js  README.md
python/: README.md  cli-app.py  fizzbuzz.py  pyproject.toml
rust/: Cargo.toml  README.md
(+45 files in other folders)
